# hello-world-python-package

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
cool_lib/: __main__.py  a.py  b.py
